Resolving #416 :  Pickers can be customized, pickers of fixed row/column are overlapping the others.

--- a/controlsfx/src/main/resources/org/controlsfx/control/spreadsheet/spreadsheet.css
+++ b/controlsfx/src/main/resources/org/controlsfx/control/spreadsheet/spreadsheet.css
@@ -112,7 +112,7 @@ HorizontalHeaderColumn > TableColumnHeader.column-header.table-column.selected{
 /* PICKERS */
 .picker-label{
     -fx-graphic: url("picker.png"); 
-    -fx-background-color: transparent;
+    -fx-background-color: white;
     -fx-padding: 0 0 0 0;
     -fx-alignment: center;
 }
